deploy_store.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gogleapp-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-boot-app
  template:
    metadata:
      labels:
        app: spring-boot-app
    spec:
      containers:
      - name: spring-boot-app
        image: asia.gcr.io/exemplary-datum-362307/store:4
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests: 
            memory: "100Mi"
            cpu: "250m"
          limits:
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: gogleapp-test
spec:
  selector:
    app: spring-boot-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
